@@ -1,3 +1,8 @@
+2010-12-14  Kevin Buettner  <kevinb@redhat.com>
+
+	* mips-tdep.c (mips_eabi_push_dummy_call): Place signed, rather
+	than unsigned, values in registers.
+
 2010-12-14  Ken Werner  <ken.werner@de.ibm.com>
 
 	* valops.c (value_one): Use get_array_bounds to compute the number
